; ModuleID = '/home/carl/AnghaBench/seafile/common/index/extr_index.c_write_index_ext_header.c'
source_filename = "/home/carl/AnghaBench/seafile/common/index/extr_index.c_write_index_ext_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32)* @write_index_ext_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_index_ext_header(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %7, align 4
  %10 = call i32 @htonl(i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @htonl(i32 %11)
  store i32 %12, i32* %8, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i64 @ce_write(i32* %13, i32 %14, i32* %7, i32 4)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %22, label %17

17:                                               ; preds = %4
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i64 @ce_write(i32* %18, i32 %19, i32* %8, i32 4)
  %21 = icmp slt i64 %20, 0
  br label %22

22:                                               ; preds = %17, %4
  %23 = phi i1 [ true, %4 ], [ %21, %17 ]
  %24 = zext i1 %23 to i64
  %25 = select i1 %23, i32 -1, i32 0
  ret i32 %25
}

declare dso_local i32 @htonl(i32) #1

declare dso_local i64 @ce_write(i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
